changed path so url background work

--- a/src/ui/components/admin/AdminTool.scss
+++ b/src/ui/components/admin/AdminTool.scss
@@ -18,11 +18,11 @@
     width: 80px;
 
     &--users {
-      background-image: url(../images/icon-manageUsers.svg);
+      background-image: url(/dist/images/icon-manageUsers.svg);
     }
 
     &--adapters {
-      background-image: url(../images/icon-viewInterchangeAdapters.svg);
+      background-image: url(/dist/images/icon-viewInterchangeAdapters.svg);
       width: 115px;
     }
   }
